{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 39,
  "lineage": "0dfd09a6-42ef-c50b-87b7-48c80acfffaf",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:security-group/sg-0791ce8007424df20",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0791ce8007424df20",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "472878233174",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-sg",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f56b6d31fdd44ed1",
            "domain": "vpc",
            "id": "eipalloc-0ce0ba4c0f3678ef8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-013ed331003314039",
            "private_dns": "ip-10-4-1-51.ec2.internal",
            "private_ip": "10.4.1.51",
            "public_dns": "ec2-18-210-126-161.compute-1.amazonaws.com",
            "public_ip": "18.210.126.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:internet-gateway/igw-0eafa6bbdebfc2f67",
            "id": "igw-0eafa6bbdebfc2f67",
            "owner_id": "472878233174",
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce0ba4c0f3678ef8",
            "connectivity_type": "public",
            "id": "nat-00ad2916eb298b865",
            "network_interface_id": "eni-013ed331003314039",
            "private_ip": "10.4.1.51",
            "public_ip": "18.210.126.161",
            "subnet_id": "subnet-08f6edaec3170dece",
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0c151a04a6d1d871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00ad2916eb298b865",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0c151a04a6d1d87",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eafa6bbdebfc2f67",
            "id": "r-rtb-058883013e43636161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058883013e4363616",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:route-table/rtb-0d0c151a04a6d1d87",
            "id": "rtb-0d0c151a04a6d1d87",
            "owner_id": "472878233174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00ad2916eb298b865",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:route-table/rtb-058883013e4363616",
            "id": "rtb-058883013e4363616",
            "owner_id": "472878233174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eafa6bbdebfc2f67",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009501829976baacd",
            "route_table_id": "rtb-0d0c151a04a6d1d87",
            "subnet_id": "subnet-09e64453306b6d049"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423acac1f332d7f0",
            "route_table_id": "rtb-0d0c151a04a6d1d87",
            "subnet_id": "subnet-0763d8ce47cc7fd69"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078be4b9aa7544bef",
            "route_table_id": "rtb-058883013e4363616",
            "subnet_id": "subnet-08f6edaec3170dece"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:subnet/subnet-09e64453306b6d049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.32.0/19",
            "id": "subnet-09e64453306b6d049",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472878233174",
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:subnet/subnet-0763d8ce47cc7fd69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.4.64.0/19",
            "id": "subnet-0763d8ce47cc7fd69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "472878233174",
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:subnet/subnet-08f6edaec3170dece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.0.0/19",
            "id": "subnet-08f6edaec3170dece",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "472878233174",
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:vpc/vpc-08b0ad09aaa43d9ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0acd8ebde6ce6abd5",
            "default_route_table_id": "rtb-0c221e3ec3ed2a1a2",
            "default_security_group_id": "sg-0791ce8007424df20",
            "dhcp_options_id": "dopt-0d45a37e2bc013d85",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08b0ad09aaa43d9ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c221e3ec3ed2a1a2",
            "owner_id": "472878233174",
            "tags": {
              "Environment": "test",
              "Name": "demo-xx41r4",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "demo-xx41r4",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kinesis-streams",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:vpc-endpoint/vpce-07faa035416f746b4",
            "dns_entry": [
              {
                "dns_name": "vpce-07faa035416f746b4-cdxtiu6r.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07faa035416f746b4-cdxtiu6r-us-east-1a.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07faa035416f746b4-cdxtiu6r-us-east-1b.kinesis.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kinesis.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07320313P36L3ACSREG3"
              }
            ],
            "id": "vpce-07faa035416f746b4",
            "network_interface_ids": [
              "eni-0a20ca8e5a8fc1c39",
              "eni-0d455b486d4269fb1"
            ],
            "owner_id": "472878233174",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0791ce8007424df20"
            ],
            "service_name": "com.amazonaws.us-east-1.kinesis-streams",
            "state": "available",
            "subnet_ids": [
              "subnet-0763d8ce47cc7fd69",
              "subnet-09e64453306b6d049"
            ],
            "tags": {
              "Name": "demo-xx41r4-kinesis-vpc-endpoint"
            },
            "tags_all": {
              "Name": "demo-xx41r4-kinesis-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:vpc-endpoint/vpce-06101d03de2520771",
            "cidr_blocks": [
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-06101d03de2520771",
            "owner_id": "472878233174",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-058883013e4363616",
              "rtb-0d0c151a04a6d1d87"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "demo-xx41r4-s3-vpc-endpoint"
            },
            "tags_all": {
              "Name": "demo-xx41r4-s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:472878233174:vpc-endpoint/vpce-0112c11bf3999c730",
            "dns_entry": [
              {
                "dns_name": "vpce-0112c11bf3999c730-58v77db6.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0112c11bf3999c730-58v77db6-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0112c11bf3999c730-58v77db6-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10429441ONXA4HG1O4I5"
              }
            ],
            "id": "vpce-0112c11bf3999c730",
            "network_interface_ids": [
              "eni-0b1bf8d2ef0e56e3b",
              "eni-0bc655a74c344441a"
            ],
            "owner_id": "472878233174",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0791ce8007424df20"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0763d8ce47cc7fd69",
              "subnet-09e64453306b6d049"
            ],
            "tags": {
              "Name": "demo-xx41r4-sts-vpc-endpoint"
            },
            "tags_all": {
              "Name": "demo-xx41r4-sts-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08b0ad09aaa43d9ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}